# StockAnalysisProject

./: README.md  pyproject.toml  requirements.txt
data/: AAPL_cleaned.csv
notebooks/: Stock.ipynb
src/: main.py
src/analysis/: correlation.py  risk_return.py
src/data_collection/: download_data.py  fetch_data.py
src/data_preparation/: prepare_data.py
src/data_preprocessing/: preprocess_data.py
src/model_selection/: model_selector.py
src/models/: lstm_model.py
src/recommendations/: recommendations.py
src/training_and_eval/: training_and_eval.py
src/visualization/: plot_data.py  plot_settings.py
