[tool.poetry]
name = "stockanalysisproject"
version = "0.1.0"
description = ""
authors = ["Nick Moore <nick.moore@pm.me>"]
readme = "README.md"


[[tool.poetry.packages]]
include = "src"
from = "."

[tool.poetry.dependencies]
python = "3.9.18"
tensorflow = "^2.15"
tensorflow-io-gcs-filesystem = "0.34.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
yfinance = "^0.2.33"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
